# demo-python-modern

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: main.yml
src/: app.py
